src/styles.css
/* You can add global styles to this file, and also import other style files */
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

@import url("https://fonts.googleapis.com/css?family=Vollkorn+SC");

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  box-sizing: border-box;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
  background: black;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* CHAPTER BACKGROUND ======================================================== */

button {
  border: none;
  margin-top: 10px;
  padding: 10px;
  background: rgba(245, 245, 245, 0.9);
  border-radius: 5px;
  position: fixed;
  bottom: 10px;
  right: 10px;
}

button:hover {
  background: #b45f06;
  color: whitesmoke;
}

.outerShell {
  margin: 137px 0 15px;
}

.innerShell {
  display: flex;
  justify-content: space-around;
  width: 950px;
  position: relative;
}

.sideShell {
  width: 300px;
}

.chapterShell {
  padding: 35px 15px;
  width: 635px;
  z-index: 0;
}

.backColor {
  background: whitesmoke;
  position: absolute;
  left: 0;
  width: 635px;
  height: 100%;
  z-index: -2;
}

.backTexture {
  background-image: url("./assets/images/chapterBackground.jpg");
  background-size: fill;
  height: 900px;
  width: 635px;
  position: absolute;
  background-repeat: no-repeat;
  top: 0;
  left: 0;
  z-index: -1;
}

.imageShell {
  display: flex;
  flex-direction: column;
  margin-left: 15px;
  width: 300px;
  height: 100%;
  background: rgba(245, 245, 245, 0.75);
}

.image {
  margin-left: 15px;
  margin-top: -26px;
  width: 300px;
  height: 100%;
}

.chapterTitle {
  z-index: 0;
  margin: 0 auto 10px auto;
  font-family: "Vollkorn SC", serif;
  border-bottom: 1px solid #222;
  display: none;
  padding: 25px 0 10px 0;
  font-size: 20pt;
}

.tableShell {
  display: none;
  z-index: 0;
  align-items: center;
  justify-content: space-around;
  margin: 15px;
  padding: 5px;
  display: none;
  background: rgb(151, 23, 21);
  border: 3px outset rgb(151, 23, 21);
}

.tableShell > p {
  color: whitesmoke;
  font-family: "Vollkorn SC", serif;
}

/* =========================================================================== */

.loadingShell {
  position: relative;
  height: 75px;
  width: 100%;
}

.loading,
.loading::before,
.loading::after {
  height: 50px;
  position: absolute;
  top: 50%;
  left: 50%;
  border: 1px solid rgb(151, 23, 21, 0.4);
  border-left-color: rgb(151, 23, 21);
  -webkit-border-radius: 999px;
  -moz-border-radius: 999px;
  border-radius: 999px;
}

.loading {
  margin: -25px 0 0 -25px;
  height: 50px;
  width: 50px;
  -webkit-animation: animation-rotate 1000ms linear infinite;
  -moz-animation: animation-rotate 1000ms linear infinite;
  -o-animation: animation-rotate 1000ms linear infinite;
  animation: animation-rotate 1000ms linear infinite;
}

.loading::before {
  content: "";
  margin: -23px 0 0 -23px;
  height: 44px;
  width: 44px;
  -webkit-animation: animation-rotate 1000ms linear infinite;
  -moz-animation: animation-rotate 1000ms linear infinite;
  -o-animation: animation-rotate 1000ms linear infinite;
  animation: animation-rotate 1000ms linear infinite;
}

.loading::after {
  content: "";
  margin: -29px 0 0 -29px;
  height: 56px;
  width: 56px;
  -webkit-animation: animation-rotate 2000ms linear infinite;
  -moz-animation: animation-rotate 2000ms linear infinite;
  -o-animation: animation-rotate 2000ms linear infinite;
  animation: animation-rotate 2000ms linear infinite;
}

@-webkit-keyframes animation-rotate {
  100% {
    -webkit-transform: rotate(360deg);
  }
}

@-moz-keyframes animation-rotate {
  100% {
    -moz-transform: rotate(360deg);
  }
}

@-o-keyframes animation-rotate {
  100% {
    -o-transform: rotate(360deg);
  }
}

@keyframes animation-rotate {
  100% {
    transform: rotate(360deg);
  }
}

/* ======================================================= */

@media (max-width: 770px) {
  .backTexture {
    background-image: none;
  }

  .outerShell {
    margin-top: 85px;
  }

  .innerShell {
    flex-direction: column-reverse;
    width: 100%;
  }

  .chapterShell {
    width: 100%;
  }

  .backTexture {
    width: 100%;
  }

  .backColor {
    width: 100%;
  }

  .imageShell {
    width: 100%;
    flex-wrap: wrap;
  }

  .image {
    display: none;
  }

  .tableShell {
    display: flex;
    margin-bottom: 0;
    display: inherit;
  }

  .imageShell {
    width: 100%;
    margin: 0;
    padding-left: 15px;
    background: transparent;
  }

  .chapterTitle {
    display: inherit;
  }

  .sidebarShell {
    margin: 15px auto;
  }

  h1 {
    text-align: center;
  }

  .tableTitle {
    text-align: left;
  }

  .triangle {
    margin-left: 0;
  }

  .anchorTag {
    position: absolute;
    top: -75px;
    left: 0;
  }

  #advancedHead {
    text-align: center;
    margin-left: 0;
  }

  .sideShell {
    width: inherit;
  }
}

@media (max-width: 600px) {
  .pairedShell {
    width: 80% !important
  }
}

/* DISPLAY STYLING ============================================================== */

h1 {
  color: #990000;
  font-weight: 700;
  font-size: 12pt;
  padding: 5px 15px 5px 15px;
}
/* ... */

